[package]
name = "stackymcstackface"
version = "0.5.0"
edition = "2024"
license = "GPL-3.0-or-later"

[[bin]]
name = "stackymcstackface"
path = "src/main.rs"

[dependencies]
anstyle = "1"
anyhow = "1"
clap = { version = "4", features = ["derive"] }
dialoguer = { version = "0.11", default-features = false }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = "thin"
strip = true

[package.metadata.release]
publish = false
